# crossocean

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  vcpkg-configuration.json  vcpkg.json
app/disk_server/: CMakeLists.txt  disk_server.cpp
app/hdisk_server/: CMakeLists.txt
cmake/: clangformat.cmake  cmakeformat.cmake  common.cmake  crossocean.h.in
core/com/: CMakeLists.txt  server_task.cpp  server_task.h  task.h  thread.cpp  thread.h  thread_pool.cpp
core/com/include/: thread_pool.h
core/com/test/: CMakeLists.txt  README.md  integration_test.cpp  main.cpp  server_task_test.cpp  task_test.cpp  thread_pool_test.cpp  thread_test.cpp
doc/: C++编码规范.md
docs/: C++编码规范.md  clang-format安装与使用.md  cmake-format安装与使用.md  docker容器初始化.md  doxygen使用说明.md  git说明.md  googletest安装与使用.md  libevent安装与使用.md  pkg-config说明.md  vckpg说明.md  vim使用手册.md
docs/html/: annotated.html  annotated_dup.js  class_i_thread-members.html  class_i_thread.html  class_i_thread.js  class_i_thread__inherit__graph.map  class_i_thread__inherit__graph.md5  class_main_window-members.html  class_main_window.html  class_test_head1-members.html  class_test_head1.html  class_test_head1.js  class_test_head1__coll__graph.map  class_test_head1__inherit__graph.md5  class_test_head2-members.html  class_test_head2.html  class_test_head2.js  class_test_head2__coll__graph.map  class_test_head2__coll__graph.md5  class_x_video-members.html  class_x_video.html  class_x_video.js  classes.html  dir_3d94263ad12945a0c75d6c0d569aa1d4.html  dir_3d94263ad12945a0c75d6c0d569aa1d4.js  dir_4e544911fe87796e181d7ae4014aa6b8.html  dir_4e544911fe87796e181d7ae4014aa6b8.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_a7e8f4746dc1ecd4c4adfb5456058e38.html  dir_a7e8f4746dc1ecd4c4adfb5456058e38.js  dir_ff31e4c59aa49022130d3242b4172ebb.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  i__thread_8h_source.html  (+27 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js
src/com/: hserver_task.h  hthread.cpp  hthread.h  server_task.h  thread.cpp  thread.h  thread_pool.cpp
src/com/include/: thread_pool.h
src/cpp_fmt/: CMakeLists.txt  i_thread.h  main.cpp  test_head1.cpp  test_head1.h  test_head2.cpp  test_head2.h
src/first_libevent/: CMakeLists.txt  main.cpp
src/firstcpp/: CMakeLists.txt  README.md
src/hcom/: CMakeLists.txt  config.h.in  crossocean.h.in  hserver_task.cpp  hserver_task.h  htask.h  hthread.cpp  hthread.h  hthread_pool.cpp
src/hcom/include/: hthread_pool.h
src/hdisk_server/: CMakeLists.txt  hdisk_server.cpp
src/test_event_server/: CMakeLists.txt  main.cpp
src/test_event_udp/: CMakeLists.txt  main.cpp
src/test_thread_pool/: CMakeLists.txt  hftp_server_cmd.cpp  hftp_server_cmd.h  htask.h  hthread.cpp  hthread.h  hthread_pool.cpp  hthread_pool.h  main.cpp
src/testdox/: CMakeLists.txt  main.cpp  xvideo.cpp  xvideo.h
